# MediNex

./: .env.example  .gitignore  CHANGELOG.md  CLINICAL_IMPLEMENTATION.md  CONTRIBUTING.md  Dockerfile  IMPLEMENTATION_PLAN.md  LICENSE  Makefile  PROJECT_PLAN.md  PROJECT_SUMMARY.md  README.md  app.py  config.development.json  config.json  config.production.json  docker-compose.yml  requirements.txt  run_api.sh  setup.py
.github/workflows/: ci.yml
ai/: __init__.py  config.py  requirements.txt
ai/api/: __init__.py  core.py
ai/clinical/: README.md  __init__.py  decision_support.py  integration.py  visualization.py
ai/contributors/: __init__.py  contributor_manager.py  revenue_sharing.py
ai/distribution/: __init__.py  model_distribution.py
ai/evaluation/: evaluate.py
ai/imaging/: pipeline.py
ai/integrations/: __init__.py  imaging_llm_pipeline.py
ai/knowledge/: __init__.py  data_importer.py  medical_knowledge_base.py  medical_rag.py
ai/llm/: __init__.py  model_connector.py
ai/models/: __init__.py  base_models.py
ai/serialization/: __init__.py  data_serialization.py
ai/training/: data_loader.py  train.py
api/: __init__.py  main.py
cache/: .gitkeep
contracts/: Anchor.toml  Cargo.toml  README.md  package.json  tsconfig.json
contracts/scripts/: test-validation.ts
contracts/src/: contribution.rs  errors.rs  lib.rs  model_registry.rs  token.rs  verification.rs
contracts/tests/: medinex_tests.rs
data/contributors/: .gitkeep
data/knowledge/: .gitkeep
data/tmp/: .gitkeep
logs/: .gitkeep
models/: .gitkeep
tests/: __init__.py  conftest.py
(+33 files in other folders)
