[package]
name = "medinex-contracts"
version = "0.1.0"
edition = "2021"
description = "Smart contracts for the MediNex AI platform"
license = "MIT"

[lib]
crate-type = ["cdylib", "lib"]
name = "medinex_contracts"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.28.0"
anchor-spl = "0.28.0"
solana-program = "1.16.0"
thiserror = "1.0.40"
borsh = "0.10.3"
spl-token = {version = "4.0.0", features = ["no-entrypoint"]}
spl-associated-token-account = {version = "2.0.0", features = ["no-entrypoint"]}
sha2 = "0.10.6"
bs58 = "0.5.0"

[dev-dependencies]
solana-sdk = "1.16.0"
solana-program-test = "1.16.0"
tokio = { version = "1.28.2", features = ["full"] }

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1
[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1 